--- a/myFirstWebsite/index.html
+++ b/myFirstWebsite/index.html
@@ -38,31 +38,31 @@
                 <section id="wiki">
                     <p class="title"> Technology Wiki</p>
                     <article>
-                        <p class=header>Logikai kapuk</p>
+                        <h2>Logikai kapuk</h2>
                         <p class=text>Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy több bináris bemeneten és produkál egy bináris kimenetet.</p>
                     </article>
                     <article>
-                        <p class="header">ASCII</p>
+                        <h3>ASCII</h3>
                         <p class="text">As angol neve American Standard Code for Information Interchange. A számítógépek csak a számokat értik, így a 'a' vagy '@' karakterek értelmezéséhez szükséges számosított értékeket írja le.
                         </p>
                     </article>
                     <article>
-                        <p class="header">RAM-Random Access Memory</p>
+                        <h4>RAM-Random Access Memory</h4>
                         <p class="text">Egy véletlen elérésű írható–olvasható adattároló eszköz. Tárolja a CPU által végrehajtandó programokat és a feldolgozásra váró adatokat. Egy adott memóriarész elérésének gyorsasága független az elhelyezkedésétől.</p>
                     </article>
                     <article>
-                        <p class=header>Programozási nyelv</p>
+                        <h5>Programozási nyelv</h5>
                         <p class=text>A számítástechnikában használt olyan, az ember által olvasható és értelmezhető utasítások sorozata, amivel közvetlenül, vagy közvetve (például: gépi kódra fordítás után) közölhetjük a számítógéppel egy adott feladat elvégzésének
                             módját.
                         </p>
                     </article>
                     <article>
-                        <p class=header>DNS-Domain Name System</p>
+                        <h6>DNS-Domain Name System</h6>
                         <p class=text>Egy hierarchikus, nagymértékben decentralizált elnevezési rendszer számítógépek, szolgáltatások, illetve az internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.
                         </p>
                     </article>
                     <article>
-                        <p class=header>HTTP Protokoll</p>
+                        <h7>HTTP Protokoll</h7>
                         <p class=text>Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek részére. A World Wide Web adat kommunikációjának alapja. Ez az alapvető protokol a hypertext cseréjére és mozgatására.</p>
                     </article>
                     <p class="separator">- - -</p>
