--- a/myFirstWebsite/index.html
+++ b/myFirstWebsite/index.html
@@ -20,7 +20,7 @@
                         <td><img src="assets/aperture.svg" alt="logo"></td>
                         <td><a href="#nav">HOME</a></td>
                         <td><a href="#wiki">WIKI</a></td>
-                        <td><a href="#github">GITHUB</a></td>
+                        <td><a href="https://github.com/ptandras?tab=repositories">GITHUB</a></td>
                         <td><a href="#linkedin">LINKEDIN</a></td>
                     </tr>
                 </table>
