--- a/myFirstWebsite/index.html
+++ b/myFirstWebsite/index.html
@@ -14,17 +14,13 @@
 <body>
     <div class="fullPage">
         <div class="content">
-            <nav id="nav">
-                <table>
-                    <tr>
-                        <td><img src="assets/aperture.svg" alt="logo"></td>
-                        <td><a href="#nav">HOME</a></td>
-                        <td><a href="#wiki">WIKI</a></td>
-                        <td><a href="https://github.com/ptandras?tab=repositories">GITHUB</a></td>
-                        <td><a href="#linkedin">LINKEDIN</a></td>
-                    </tr>
-                </table>
-            </nav>
+            <div class="flex-container">
+                <div><img src="assets/aperture.svg" alt="logo"></div>
+                <div class="push"><a href="#nav">HOME</a></div>
+                <div><a href="#wiki">WIKI</a></div>
+                <div><a href="https://github.com/ptandras?tab=repositories">GITHUB</a></div>
+                <div><a href="#linkedin">LINKEDIN</a></div>
+            </div>
             <div class="contentText">
                 <section>
                     <h1>Papp Tibor András</h1>
@@ -68,8 +64,8 @@
                     <p class="separator">- - -</p>
                 </section>
             </div>
+
         </div>
-    </div>
 </body>
 
 </html>
